amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


VERSION 0.9-beta3:
  * add: ported config-GUI for audio decoders to new engine (works currently with
         modplug_artsplugin)
  * fix: show correct track-length when playing .mod or .sid with aRts-engine
  * add: loader application, starts and controls amaroK. it reduces the lag when handing
         command line arguments to amaroK and makes the splash load faster
  * add: playlist items, which couldn't be opened / read (for some reason) will be marked 
         with a grey background color
  * add: pasting clipboard selection into playlist with MidButton, X11-style  
  * chg: refined on-screen-display with more polished look
  * fix: skipping broken/non-existant tracks
  * chg: If the current song is paused, the Play Button will resume, not restart it.
  * fix: respect "hide playlist with main window" and playlist minimize/hide behaviour.
  * add: new OSD configuration options: bgcolor, screen position

VERSION 0.9-beta2:
  * chg: some look-and-feel polishing in the main player window
  * add: option to turn off analyzers
  * add: splash-screen shown during program startup (optional)
  * fix: made stream playback with TitleProxy more stable (by using an unbuffered socket)
  * add: show stream metadata in on-screen-display
  * chg: transformed "EQ" button into a togglebutton, which can also hide the effect browser
  * add: new OpenGL analyzer, contributed by Enrico Ros <eros.kde@email.it>
  * fix: FreeBSD compile fixes, contributed by Markus Brueffer <brueffer@phoenix-systems.de>
  * fix: rewritten configure: checks properly for kdemultimedia presence,
         and adds --without-opengl and --without-gstreamer arguments

VERSION 0.9-beta1:
  * add: display warning when artsd is not running with realtime priority
  * add: Audioproperties are loaded as you scroll the playlist and get saved to playlist files